--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -144,7 +144,7 @@ The amount of nitrogen input to the coral biomass SU in excess of what is actual
 
 [^1]: Rejection fluxes must always be positive, and hence are specified with the notation $(x)_+$, which means $max(x, 0)$.
 
-Due to the inherent inefficiency of the parallel complementary SU formulation, there is always some nitrogen shared with the symbiont even when coral biomass formation is strongly nitrogen-limited. Likewise, there is always a non-zero rejection flux of excess carbon from the coral biomass SU. Likewise, the carbon rejected from this SU reflects the amount of excess fixed carbon available to the host that is not used in biomass formation:
+Due to the inherent inefficiency of the parallel complementary SU formulation, there is always some nitrogen shared with the symbiont even when coral biomass formation is strongly nitrogen-limited. Likewise, there is always a non-zero rejection flux of excess carbon from the coral biomass SU. The carbon rejected from this SU reflects the amount of excess fixed carbon available to the host that is not used in biomass formation:
 
 \begin{equation} j_{eC} = (jX + \rho_C{S \over H} - j_{HG})_+ \end{equation}
 
@@ -214,7 +214,7 @@ This second component of symbiont biomass loss represents both photodamage and/o
 
 The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-21) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, CO~2~ rejected from the host SU at time $t$ arrives at the photosynthesis SU at time $t + \Delta t$. 
 
-Simulations using the discretized scheme were performed using R code that is available in the data repository accompanying this article: github.com/jrcunning/Rcoral. By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. XXX in this paper). For steady state estimations, simulations were run until the change in specific growth rate of host and symbiont and the $S:H$ biomass ratio was less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code.
+Simulations using the discretized scheme were performed using R code that is available in the data repository accompanying this article: github.com/jrcunning/Rcoral. By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. 2-8 in this paper). For steady state estimations, simulations were run until the change in specific growth rate of host and symbiont and the S:H biomass ratio was less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code.
 
 To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates using the formula
 
@@ -223,13 +223,13 @@ To aid in visualizing model results, we calculated values to indicate the degree
 where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates and $j_{Pm}$ is the maximum specific product formation rate, in units of Cmol Cmol^-1^ d^-1^.
 
 # Steady state behavior
-In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states, corresponding to either positive or negative growth (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape this positive feedback and cannot grow. However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; the subsequent "dynamic behavior" section explores how changing environments may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching.
+In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states, corresponding to either positive or negative growth (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), the system cannot escape this positive feedback and cannot grow. However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; subsequently, we explore how environmental forcing may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching (see "Coral Bleaching and Recovery", below).
 
 ![Alternate stable states](../img/Fig2.png)
 
 To analyze positive-growth steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
 
-![Steady state values of **A)** specific growth (Cmol Cmol^-1^ d^-1^), **B)** the symbiont to host biomass ratio (CmolS CmolH^-1^), **C)** relative C- or N-limitation of host biomass formation, and **D)** relative CO~2~- or light-limitation of symbiont photosynthesis, across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run for 100 days with a time step of 1 day. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig3.png)
+![Steady state values of (A) specific growth (Cmol Cmol^-1^ d^-1^) and (B) the symbiont to host biomass ratio (CmolS CmolH^-1^) across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run for 100 days with a time step of 1 day. All parameters were set to default values and prey density set to zero. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig3.png)
 
 Similarly, increasing DIN alleviates nitrogen-limitation (Fig. 3A). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting. Very high nutrient levels may even reduce growth [@Shantz:2015dz], although these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. In addition to increasing growth, DIN also increases the symbiont to host biomass ratio (Fig. 3B), a phenomenon also observed in reef corals [@Marubini:1996p8460]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.06-0.21, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv; @Hawkins:2016jj].
 
@@ -253,7 +253,7 @@ The dynamic behavior of the model demonstrates its power to integrate multiple e
 ## Seasonal variability
 Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: under high light in summer, photooxidative stress decreases symbiont biomass and increases carbon-limitation of host growth regardless of nutrient status; when light is reduced in winter, growth and symbiont biomass become constrained instead by nitrogen, and therefore increase more when DIN is enriched (Fig. S8).
 
-![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 22 mol photons m^-2^ d^-1^, based on @Stimson:1997p3837. The dynamic behavior of symiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under higher nutrients (1e-5 molN L^-1^; dashed lines) relative to lower nutrients (1e-7 molN L^-1^; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-5 CmolX L^-1^.](../img/Fig5.png)
+![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 22 mol photons m^-2^ d^-1^, based on @Stimson:1997p3837. The dynamic behavior of symbiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under higher nutrients (1e-5 molN L^-1^; dashed lines) relative to lower nutrients (1e-7 molN L^-1^; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-5 CmolX L^-1^.](../img/Fig5.png)
 
 The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer, consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone (at these levels) may drive seasonal dynamics in the ways discussed, temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
 
@@ -264,26 +264,26 @@ While these positive feedbacks have been discussed previously in the literature,
 
 We are highly interested in the conditions under which the system switches from a healthy to a bleached state, and can use this model as a tool to explore this dynamic behavior. Most straightforwardly, this switch occurs when increasing external irradiance (Fig. 6A) causes sufficient ROS production (Fig. 6B) and photoinhibition (Fig. 6C) such that the positive feedbacks between host carbon-limitation (Fig. 6D) and CO~2~-limitation of photosynthesis (Fig. 6E) are rapidly engaged, leading to even greater photooxidative stress and a rapid decline in S:H biomass (Fig. 6F), characteristic of coral bleaching. However, the positive feedbacks involved in bleaching are not engaged only in response to high external irradiance alone; in fact, they depend on the relative balance of light energy absorption and quenching, which in turn depends on the availability of CO~2~ for photosynthesis. While previous models framed photooxidative stress as a fixed response to absolute external irradiance [@Eynaud:2011tv], our implementation considers the dynamic balance of multiple energy sinks in the causation of stress, which is more consistent with current understanding of symbiosis dysfunction [@Wooldridge:2013tj], and establishes a critical role of host CCMs in providing CO~2~ for photosynthesis [@Tansik:2015cm; @Hopkinson:2015ev].
 
-![Coral bleaching as a switch from a nitrogen- to carbon-limited alternative stable state. This transition is demonstrated in response to gradually increasing external light (A), which causes an increase in production of ROS (B) that reduces the photosynthetic rate through photoinhibition (C). Decreasing photosynthesis moves the system from overall nitrogen-limitation toward carbon-limitation (D); when this threshold is crossed, the system rapidly becomes highly carbon-limited as photosynthesis becomes CO~2~-limited (E) and symbiont densities rapidly decline (F) into a bleached state. (All parameters at default values; external DIN=1e-7 molN/L, prey density=0).](../img/Fig6.png)
+![Coral bleaching as a switch from a nitrogen- to carbon-limited alternative stable state. This transition is demonstrated in response to gradually increasing external light (A), which causes an increase in production of ROS (B) that reduces the photosynthetic rate through photoinhibition (C). Decreasing photosynthesis moves the system from overall nitrogen-limitation toward carbon-limitation (D); when this threshold is crossed, the system rapidly becomes highly carbon-limited as photosynthesis becomes CO~2~-limited (E) and symbiont densities rapidly decline (F) into a bleached state. Substrate limitation coefficients were calculated using Eq. 22. All parameters were set at default values with external DIN=1e-7 molN/L and prey density=0).](../img/Fig6.png)
 
-The importance of host CCM activity establishes significant interactive roles for other factors in influencing coral bleaching responses. For example, simulations of high light stress (Fig. 7) demonstrate that bleaching can be attenuated by heterotrophic feeding, a phenomenon which has been observed experimentally [@Borell:2008p108]. The mechanism underlying this prediction is that feeding by the host increases host CCM activity, which delays the onset of CO~2~-limitation of photosynthesis and reduces bleaching severity. On the other hand, elevated nutrients exacerbate bleaching (Fig. 7), since higher symbiont densities are more susceptible to CO~2~-limitation [@Wooldridge:2009p7807]. Several experimental [@Cunning:2013gp; @VegaThurber:2014hk] and correlational studies [@Wooldridge:2009kb] are consistent with this mechanistic link between high nutrients and bleaching.
+The importance of host CCM activity establishes significant interactive roles for other factors in influencing coral bleaching responses. For example, simulations of high light stress (Fig. 7) demonstrate that bleaching can be attenuated by heterotrophic feeding, a phenomenon which has been observed experimentally [@Borell:2008p108]. The mechanism underlying this prediction is that feeding by the host increases host CCM activity, which delays the onset of CO~2~-limitation of photosynthesis and reduces bleaching severity. On the other hand, elevated nutrients exacerbate bleaching (Fig. 7), since higher symbiont densities are more susceptible to CO~2~-limitation [@Wooldridge:2009p7807]. Several experimental [@Wiedenmann:2013bn; @Cunning:2013gp; @VegaThurber:2014hk] and correlational studies [@Wooldridge:2009kb] are consistent with this mechanistic link between high nutrients and bleaching.
 
 ![Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=48 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 molN L^-1^; prey=3e-6 CmolX L^-1^), or with elevated feeding (dashed line; prey=6e-6 CmolX L^-1^), or elevated nutrients (dotted line; DIN=1e-6 molN L^-1^). Initial symbiont biomass was set to the steady state for each set of starting conditions, respectively. (All parameters set to default values).](../img/Fig7.png)
 
-Since bleaching is induced by an external stressor, recovery from bleaching cannot occur unless the stressor is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, alternate stable states lead to significant hysteresis, indicating that a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2; Fig. X). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the core behavior of hysteresis illustrates the alternate stable states that exist in the symbiotic system.
+Since bleaching can be understood as a transition from a nitrogen-limited state with high S:H biomass to a carbon-limited state with low S:H biomass, induced by an external stressor, recovery can be understood as a switch back to the nitrogen-limited state once the external stressor is alleviated. In natural settings, this typically occurs through seasonal declines in temperature and light. However, hysteresis associated with the system's alternate stable states indicates that the symbiosis cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2). This is because under the same external conditions, a bleached coral with low S:H biomass (relative to a healthy coral with high S:H biomass) is characterized by greater light amplification and weaker CCM activity, which enhance photooxidative stress and serve to maintain the carbon-limited state. In order for the system to recover, the stressor must be reduced enough such that photooxidative stress ceases and translocation of carbon from symbiont to host is resumed. Once this occurs, the host can energize its CCMs, which further enhances carbon fixation and accelerates the system back toward a nitrogen-limited state, indicative of recovery. The conditions under which recovery can occur -- which determine the magnitude of hysteresis (Fig. S9) -- depend on the relative abundance of nitrogen and carbon in the environment. Higher food levels, representing a non-autotrophic carbon source for the host, make it easier for the host to overcome carbon-limitation, thus providing a potential mechanism underlying observations that feeding aids recovery from bleaching [@Grottoli:2006p3692; @Connolly:2012ep]. Conversely, high external DIN impedes the re-establishment of nitrogen-limitation, making recovery from bleaching more difficult (i.e., narrowing the sets of conditions under which recovery is possible).
 
-The dynamics of recovery from bleaching reveal another interesting behavior of the system: under some conditions, the S:H biomass ratio may increase to a higher value that 'overshoots' the ratio maintained in the 'healthy' state under the same conditions (Fig. 8; Fig. S9). In fact, unusually high symbiont densities have been observed after recovery from bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system <<NOT RIGHT>>. As the symbiont begins repopulating the host, CO~2~ is limiting and nitrogen is replete, allowing nearly all fixed carbon to be used for symbiont growth. As a result, host growth remains strongly carbon-limited, CCM activity remains weak, and photosynthesis remains CO~2~-limited. As long as this carbon-limitation persists, S:H biomass will continue to increase beyond the 'healthy' steady state level, until the symbiont population eventually reaches a high enough density such that nitrogen limits its growth more strongly than carbon. At this point, which represents the peak of the 'overshoot', the symbiont begins to share carbon with the host, which then supplies more CO~2~ for photosynthesis, etc., causing the system to rapidly escape the positive feedbacks that were maintaining carbon-limitation (see Fig. S9 for illustration of all fluxes during overshoot). The re-establishment of nitrogen-limitation resumes high rates of carbon fixation and coral growth, bringing the S:H biomass ratio back down to a stable equilibrium. 
+Dynamic simulations of recovery reveal another interesting behavior of the system: under some conditions, an 'overshoot' occurs in which S:H biomass temporarily increases beyond the ratio maintained in the 'healthy' state, before returning to stabilize at this value (Fig. 8). In fact, unusually high symbiont densities have been observed following bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model reveals the dynamics of this 'overshoot' as follows: as symbionts repopulate the host, photosynthesis becomes increasingly CO~2~-limited due to weak CCM activity of the carbon-limited host. Thus, although symbiont growth is not yet carbon-limited, a growing symbiont population has less and less excess carbon (per symbiont) to share, and is thus moving toward carbon-limitation. Meanwhile, because S:H biomass is increasing, the host receives more and more carbon per unit host biomass, and is thus moving away from carbon-limitation. If the host overcomes carbon-limitation *before* the symbiont reaches it, then the system rapidly transitions to the nitrogen-limited state and the S:H ratio stabilizes without an overshoot (Fig. 8A). However, if the symbiont becomes carbon-limited first (Fig. 8B, 8C), then carbon translocation per symbiont declines further and photosynthesis becomes more CO~2~-limited, which maintains carbon-limitation of the host. In this situation, continued growth of less and less productive symbionts drives S:H biomass to a much higher level before the host finally overcomes carbon-limitation. At this point, representing the peak of the overshoot, the transition to nitrogen-limitation finally takes place and the S:H biomass ratio declines and stabilizes as positive growth is resumed.
 
-![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), L=10 mol photons m^2^ d^-1^, DIN=1e-7 molN L^-1^, prey=1e-6 CmolX L^-1^, and initial S:H biomass=0.0001.](../img/Fig8.png)
+Whether this 'overshoot' occurs or not represents a bifurcation point in the dynamical system that is defined by the relative availability of carbon and nitrogen to the host -- any factor that enhances carbon-limitation of host growth (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN and/or high feeding rates, will accelerate the re-establishment of nitrogen-limitation and prevent an overshoot from occurring at all. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8A-C): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
 
-The occurrence and the magnitude of this overshoot depend on the relative inputs of carbon and nitrogen to the system -- any factor that enhances carbon-limitation (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN and/or high feeding rates, will accelerate the re-establishment of nitrogen-limitation and prevent an overshoot from occurring at all. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+![Recovery from bleaching with varying N:C availability (A: N:C=0.09; B: N:C=0.10; C: N:C=0.30). Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation. Substrate limitation coefficients were calculated using Eq. 22. All simulations were run with default parameters (except varying $n_{NX}$), with L=10 mol photons m^2^ d^-1^, DIN=1e-7 molN L^-1^, prey=1e-6 CmolX L^-1^, and initial S:H biomass=0.001.](../img/Fig8.png)
 
-Importantly, the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when high carbon fixation and growth rates are resumed. A high S:H biomass ratio alone does not indicate that a 'healthy' state has been reached, since overall C-limitation may still persist (e.g., high N:C ratios in Fig. 8). This could explain why corals that have apparently recovered their symbiont populations after bleaching still have reduced growth and reproduction rates until much later (xxx, Hughes). Therefore, acquisition of carbon from a source other than the symbiont may be extremely important for the host in order to recover from bleaching. Indeed, feeding has been shown to promote more rapid recovery from bleaching (xxx). Moreover, if the host obtains carbon from another independent source, such as direct uptake of DOC (xxx), this could be even more important in ensuring rapid recovery from a bleached state.
+These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the C-limited state may still persist (e.g., Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts for much longer periods of time [@Levitan:2014et, @Hughes:2013hd]. Therefore, host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. The model predicts that acquisition of carbon from other sources, such as direct uptake of DOC [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
 
 # Conclusions
-This simplified dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which the host is 'in control' of the system, with nitrogen-limitation stabilizing the symbiont to host biomass ratio and maintaining positive growth. Conversely, carbon-limitation represents a loss of host 'control', wherein positive feedbacks result in a loss of capacity for photosynthetic carbon fixation and positive growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
+This simplified dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which nitrogen-limitation stabilizes the symbiont to host biomass ratio and maintains positive growth. Conversely, carbon-limitation represents a dysfunctional state wherein positive feedbacks result in a loss of photosynthetic capacity and negative growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
 
-In addition to the suite of specific examples presented here, the model can be used to explore many different dynamic environmental scenarios, and represents a tool that biologists and ecologists can use to generate hypotheses and make predictions in both experimental and natural settings. Moreover, parameter values can be modified to correspond to different genetic or functional types of coral hosts and *Symbiodinium* partners in order to evaluate variability in system responses. Thus, the diversity of potential applications for this model is high, and we envision this work as a foundation for continued development, which may include more detailed treatments of specific modules (e.g., DIC processing), and the incorporation of more external forcing capabilities (e.g., external DIC). Importantly, this effort is best undertaken by the scientific community at large, including those with theoretical and empirical backgrounds, which is why the code for this model has been developed openly using the R language. Ultimately, the continued refinement of these tools is fundamental in elucidating the mechanisms of symbiosis function and dysfunction, and in predicting coral responses to environmental change.
+In addition to the suite of specific examples presented here, the model can be used to explore many different dynamic environmental scenarios, and represents a tool that biologists and ecologists can use to generate hypotheses and make predictions in both experimental and natural settings. Moreover, parameter values can be modified to correspond to different genetic or functional types of coral hosts and *Symbiodinium* partners in order to evaluate variability in system responses. Thus, the diversity of potential applications for this model is high, and we envision this work as a foundation for continued development, which may include more detailed treatments of specific modules (e.g., DIC processing), and the incorporation of more external forcing capabilities (e.g., external DIC, temperature). Importantly, this effort may be undertaken by the scientific community at large, including those with theoretical and empirical backgrounds, which is why the code for this model has been developed openly using the R language. Ultimately, the continued refinement of these tools is fundamental in elucidating the mechanisms of symbiosis function and dysfunction, and in predicting coral responses to environmental change.
 
 References {#references .unnumbered}
 ==========
